--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://jumbal.github.io
+url: http://Jumbal.github.io
 title: Have Fun
 subtitle: Every cloud has a silver lining
 author: jumbal
