--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://Jumbal.github.io
 title: Have Fun
 subtitle: Every cloud has a silver lining
-author: jumbal
+author: Jumbal
 simple_search: https://www.google.com/search
 description:
 
